--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
         <h1><a class="logo" href="index.html"><img src="images/logo.png" alt="Черкаська мрія">Черкаська мрія</a></h1>
         <nav>
         <ul class="main-menu">
-            <li><a href="#">Мрії</a></li>
             <li><a href="FAQ.html">FAQ</a></li>
             <li><a href="contacts.html">Контакти</a></li>
-            <li><a href="#">Підписатись</a></li>
         </ul>
         </nav>
         <div class="search">
@@ -28,28 +26,42 @@
             <a class="search-link" href="#">Пошук</a>
         </div>
         <ul class="social">
-            <li><a href="#"><span class="ico-fb"></span></a></li>
-            <li><a href="#"><span class="ico-vk"></span></a></li>
-            <li><a href="#"><span class="ico-ok"></span></a></li>
+            <li>
+                <a href="#"><span class="ico-fb"></span></a>
+            </li>
+            <li>
+                <a href="#"><span class="ico-vk"></span></a>
+            </li>
+            <li>
+                <a href="#"><span class="ico-gplus"></span></a>
+            </li>
+            <li>
+                <a href="#"><span class="ico-tw"></span></a>
+            </li>
         </ul>
         <span class="social-title">Увійти через</span>
         <ul class="account-bar">
             <li>
-                <a class="user" href="#">ss</a>
+                <a class="user-photo" href="#"><img src="images/user-photo.jpg" alt="User photo"></a>
             </li>
             <li>
-                <a class="user-msg" href="#">mmm</a>
+                <a class="profile" href="#">profile</a>
+            </li>
+            <li>
+                <a class="user-msg" href="#">messages</a>
             </li>
             <li class="show-dreams">
-                <a class="user-dreams" href="#">ddd</a>
-                <ul class="user-dreams-list">
-                    <li><a href="#">Мрія 1</a></li>
-                    <li><a href="#">Мрія 2</a></li>
-                    <li><a href="#">Мрія 3</a></li>
+                <a class="user-dreams" href="#">user dreams</a>
+                <ul class="user-dreams-list empty-list">
+                    <li class="dream-item"><a href="#">Мрія 1</a></li>
+                    <li class="dream-item"><a href="#">Мрія 2</a></li>
+                    <li class="dream-item"><a href="#">Мрія 3</a></li>
+                    <li class="close-block"><a href="#" class="close"><span class="ico-cancel"></span></a></li>
+                    <li class="no-user-dreams"><p>Ви не додали жодної мрії</p></li>
                 </ul>
             </li>
             <li>
-                <a class="logout" href="#">aa</a>
+                <a class="logout" href="#">logout</a>
             </li>
         </ul>
         <a class="add-dream" href="#">Додати мрію</a>
@@ -106,7 +118,7 @@
                     </div>
                 </div>
                 <img src="images/counter.png" alt="">
-                <a class="btn-support checked" href="#"></a>
+                <a class="btn-support" href="#">Підтримати</a>
             </li>
             <li>
                 <span class="favorite"></span>
@@ -273,9 +285,7 @@
         </li>
         <li>
             <ul class="links">
-                <li><a href="#">Мрії</a></li>
                 <li><a href="#">Регламент та поради</a></li>
-                <li><a href="#">Підписатись на оновлення</a></li>
                 <li><a href="#">Контакти</a></li>
             </ul>
         </li>
@@ -289,7 +299,7 @@
                     <a href="#"><span class="ico-vk"></span></a>
                 </li>
                 <li>
-                    <a href="#"><span class="ico-ok"></span></a>
+                    <a href="#"><span class="ico-gplus"></span></a>
                 </li>
                 <li>
                     <a href="#"><span class="ico-tw"></span></a>
