--- a/index.html
+++ b/index.html
@@ -373,5 +373,37 @@
     </ul>
 </footer>
 </div>
+<div class="popup popup-login" id="popup-login">
+    <div class="popup-content">
+        <a class="close" href="#"><span class="ico-cancel"></span></a>
+        <p>Вам необхідно авторизуватись</p>
+        <ul class="social">
+            <li>
+                <a href="#"><span class="ico-fb"></span></a>
+            </li>
+            <li>
+                <a href="#"><span class="ico-vk"></span></a>
+            </li>
+            <li>
+                <a href="#"><span class="ico-gplus"></span></a>
+            </li>
+            <li>
+                <a href="#"><span class="ico-tw"></span></a>
+            </li>
+        </ul>
+    </div>
+</div>
+<div class="popup popup-willview" id="popup-willview">
+    <div class="popup-content">
+        <a class="close" href="#"><span class="ico-cancel"></span></a>
+        <p>Дякуємо, Ваша мрія буде розглянута адміністратором.</p>
+    </div>
+</div>
+<div class="popup popup-thanks" id="popup-thanks">
+    <div class="popup-content">
+        <a class="close" href="#"><span class="ico-cancel"></span></a>
+        <p>Дякуємо за вашу підтримку!</p>
+    </div>
+</div>
 </body>
 </html>
