--- a/index.html
+++ b/index.html
@@ -92,25 +92,25 @@
         <div class="carosel-inner">
             <ul>
                 <li class="active">
-                    <a href="#"><img src="images/carosel-item2.jpg"></a>
+                    <a href="#"><img src="images/carosel-item2.jpg" alt="carosel item"></a>
                     <p class="dream-info">
                         Rostrud tionsequat. Met lan et, vullummy num augait incipit vullamet praestrud dunt lore conse con henibh ex ectem alit velisl ex eratue consequatum zzrit duisit irit lut volore ecte exerci te faci ea. feui eugait aut lore dolendigna feugiamet ea autpatuero odo dolorem iliquam, velesed del ulputetue modit nisi.
                     </p>
                 </li>
                 <li>
-                    <a href="#"><img src="images/carosel-item2.jpg"></a>
+                    <a href="#"><img src="images/carosel-item2.jpg" alt="carosel item"></a>
                     <p class="dream-info">
                         Celisl ex eratue consequatum zzrit duisit irit lut volore ecte exerci te faci ea feui eugait aut lore dolendigna feugiamet ea autpatuero odo dolorem iliquam, velesed del ulputetue modit nisi.
                     </p>
                 </li>
                 <li>
-                    <a href="#"><img src="images/carosel-item1.jpg"></a>
+                    <a href="#"><img src="images/carosel-item1.jpg" alt="carosel item"></a>
                     <p class="dream-info">
                        Met lan et, vullummy numaugait incipit vullamet praestrud dunt lore conse con henibh ex ectem alit velisl ex eratue consequatum zzrit duisit irit lut volore ecte exerci te faci ea feui eugait aut lore dolendigna feugiamet ea autpatuero odo dolorem iliquam, velesed del ulputetue modit nisi.
                     </p>
                 </li>
                 <li>
-                    <a href="#"><img src="images/carosel-item2.jpg"></a>
+                    <a href="#"><img src="images/carosel-item2.jpg" alt="carosel item"></a>
                     <p class="dream-info">
                        Met lan et, vullummy numaugait incipit vullamet praestrud dunt lore conse con henibh ex ectem alit velisl ex eratue consequatum zzrit duisit irit lut volore ecte exerci te faci ea feui eugait aut lore dolendigna feugiamet ea autpatuero odo dolorem iliquam, velesed del ulputetue modit nisi.
                     </p>
