--- a/contacts.html
+++ b/contacts.html
@@ -13,74 +13,79 @@
 <body>
 <div class="wrapper">
 	<header>
-		<p><a class="logo" href="index.html"><img src="images/logo.png" alt="Черкаська мрія">Черкаська мрія</a></p>
-		<nav>
-		<ul class="main-menu">
-			<li><a href="#">Мрії</a></li>
-			<li><a href="#">FAQ</a></li>
-			<li><a href="#">Контакти</a></li>
-			<li><a href="#">Підписатись</a></li>
-		</ul>
-		</nav>
-
-
-		<div class="search">
-			<form action="#" method="post">
-				<input type="submit" value="">
-				<input type="text" name="search_text" class="search-field" placeholder="Geekstarte">
-			</form>
-			<a class="search-link" href="#">Пошук</a>
-		</div>
-		<ul class="social">
-			<li><a href="#"><span class="ico-fb"></span></a></li>
-			<li><a href="#"><span class="ico-vk"></span></a></li>
-			<li><a href="#"><span class="ico-ok"></span></a></li>
-		</ul>
-		<span class="social-title">Увійти через</span>
-		<ul class="account-bar">
-			<li>
-				<a class="user" href="#">ss</a>
-			</li>
-			<li>
-				<a class="user-msg" href="#">mmm</a>
-			</li>
-			<li class="show-dreams">
-				<a class="user-dreams" href="#">ddd</a>
-				<ul class="user-dreams-list">
-					<li><a href="#">Мрія 1</a></li>
-					<li><a href="#">Мрія 2</a></li>
-					<li><a href="#">Мрія 3</a></li>
-				</ul>
-			</li>
-			<li>
-				<a class="logout" href="#">aa</a>
-			</li>
-		</ul>
-		<a class="add-dream" href="#">Додати мрію</a>
-	</header>
+        <p><a class="logo" href="index.html"><img src="images/logo.png" alt="Черкаська мрія">Черкаська мрія</a></p>
+        <nav>
+        <ul class="main-menu">
+            <li><a href="FAQ.html">FAQ</a></li>
+            <li><a href="contacts.html">Контакти</a></li>
+        </ul>
+        </nav>
+        <div class="search">
+            <form action="#" method="post">
+                <input type="submit" value="">
+                <input type="text" name="search_text" class="search-field" placeholder="Geekstarte">
+            </form>
+            <a class="search-link" href="#">Пошук</a>
+        </div>
+        <ul class="social">
+            <li>
+                <a href="#"><span class="ico-fb"></span></a>
+            </li>
+            <li>
+                <a href="#"><span class="ico-vk"></span></a>
+            </li>
+            <li>
+                <a href="#"><span class="ico-gplus"></span></a>
+            </li>
+            <li>
+                <a href="#"><span class="ico-tw"></span></a>
+            </li>
+        </ul>
+        <span class="social-title">Увійти через</span>
+        <ul class="account-bar">
+            <li>
+                <a class="user-photo" href="#"><img src="images/user-photo.jpg" alt="User photo"></a>
+            </li>
+            <li>
+                <a class="profile" href="#">profile</a>
+            </li>
+            <li>
+                <a class="user-msg" href="#">messages</a>
+            </li>
+            <li class="show-dreams">
+                <a class="user-dreams" href="#">user dreams</a>
+                <ul class="user-dreams-list empty-list">
+                    <li class="dream-item"><a href="#">Мрія 1</a></li>
+                    <li class="dream-item"><a href="#">Мрія 2</a></li>
+                    <li class="dream-item"><a href="#">Мрія 3</a></li>
+                    <li class="close-block"><a href="#" class="close"><span class="ico-cancel"></span></a></li>
+                    <li class="no-user-dreams"><p>Ви не додали жодної мрії</p></li>
+                </ul>
+            </li>
+            <li>
+                <a class="logout" href="#">logout</a>
+            </li>
+        </ul>
+        <a class="add-dream" href="#">Додати мрію</a>
+    </header>
 	
     <div class="bg-pages">
         <section class="feedback">
             <h1 class="contacts-page-title">Зворотній зв’язок</h1>
             <dl>
                 <dt class="city-com">Міський звязок<span></span></dt>
-                <dd>(0472) 33-22-11</dd>
+                <dd><a href="tel:0472332211" title="">(0472) 33-22-11</a></dd>
                 <dt class="life-com">Life<span></span></dt>
-                <dd>(093) 333-33-33</dd>
+                <dd><a href="tel:0933333333" title="">(093) 333-33-33</a></dd>
                 <dt class="mts-com">MTC<span></span></dt>
-                <dd>(099) 484-33-33</dd>
+                <dd><a href="tel:0994843333" title="">(099) 484-33-33</a></dd>
                 <dt class="kievstar-com">Kyivstar<span></span></dt>
-                <dd>(097) 841-33-33</dd>
+                <dd><a href="tel:0978413333" title="">(097) 841-33-33</a></dd>
                 <dt class="skype">Skype<span></span></dt>
-                <dd>neuhatska.svitlana</dd>
+                <dd><a href="skype:neuhatska.svitlana?chat" title="">neuhatska.svitlana</a></dd>
                 <dt class="icq-link">ICQ<span></span></dt>
-                <dd>999-888-777</dd>
-                <dt class="address">З будь-яких питань<br/>звертайтесь за адресою</dt>
-                <dd>м. Черкаси,  <br/>вул. Дашкевича 40</dd>
+                <dd><a href="http://download.icq.com/icq2go/flicq.html" title="">999-888-777</a></dd>
             </dl>
-            <div class="geolocation">
-                <img src="images/contacts-geoloc-bg.jpg" width="433" height="292" alt="geoloc">
-            </div>
         </section>
         <section class="write-to-us">
             <h2 class="write-to-us-title">Пишіть нам</h2>
@@ -91,7 +96,7 @@
                         <li class="mail-subject"><label for="mail-subject">Тема листа</label><input type="text" id="mail-subject" name="mail-subject" /></li>
                         <li class="text-subject"><label for="text-subject">Текст повідомлення</label><textarea id="text-subject" name="text-subject" cols="30" rows="10"></textarea></li>
                         <li class="captcha"><label for="captcha">Капча</label><input type="text" id="captcha" name="captcha" /><img src="images/contacts-captcha.jpg" alt="captcha"></li>
-                        <li class="enter-form"><input type="submit" value="Надіслати" /></li>
+                        <li class="enter-form"><input class="red-button" type="submit" value="Надіслати" /></li>
                     </ul>
                 </fieldset>
             </form>            
@@ -105,9 +110,7 @@
             </li>
             <li>
                 <ul class="links">
-                    <li><a href="#">Мрії</a></li>
                     <li><a href="#">Регламент та поради</a></li>
-                    <li><a href="#">Підписатись на оновлення</a></li>
                     <li><a href="#">Контакти</a></li>
                 </ul>
             </li>
@@ -121,7 +124,7 @@
                         <a href="#"><span class="ico-vk"></span></a>
                     </li>
                     <li>
-                        <a href="#"><span class="ico-ok"></span></a>
+                        <a href="#"><span class="ico-gplus"></span></a>
                     </li>
                     <li>
                         <a href="#"><span class="ico-tw"></span></a>
