delete class in content

--- a/new-dream(empty+full).html
+++ b/new-dream(empty+full).html
@@ -67,7 +67,7 @@
         <a class="add-dream" href="#">Додати мрію</a>
     </header>
 	
-    <section class="bg-pages new-dream-page">
+    <section class="bg-pages">
         <form method="post">
             <fieldset class="media">
                 <legend>Додати</legend>
