Adding oldBrowser & creatingDream templates

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <!--HEADER-->
     <ui-view></ui-view>
+    <!--FOOTER-->
 </body>
 </html>
