--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="js/app.js"></script>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="styles/contacts.css">
+    <link rel="stylesheet" href="styles/error-page.css">
+    <link rel="stylesheet" href="styles/FAQ.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/new-dream(empty+full)+edit-page.css">
+    <link rel="stylesheet" href="styles/search.css">
+    <link rel="stylesheet" href="styles/user-profile.css">
+    <link rel="stylesheet" href="styles/user-profile-edit.css">
 </head>
 <body>
     <ui-view></ui-view>
