Adding all config files

--- a/index.html
+++ b/index.html
@@ -1,9 +1,41 @@
 <!doctype html>
-<html ng-app="Che-app">
+<html ng-app="chedream.app">
 <head>
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="js/app.js"></script>
+
+    <script src="js/allDreams/controller.js"></script>
+    <script src="js/allDreams/model.js"></script>
+    <script src="js/allDreams/routing.js"></script>
+    <script src="js/contacts/controller.js"></script>
+    <script src="js/contacts/model.js"></script>
+    <script src="js/contacts/routing.js"></script>
+    <script src="js/dream/controller.js"></script>
+    <script src="js/dream/model.js"></script>
+    <script src="js/dream/routing.js"></script>
+    <script src="js/error/controller.js"></script>
+    <script src="js/error/model.js"></script>
+    <script src="js/error/routing.js"></script>
+    <script src="js/faq/controller.js"></script>
+    <script src="js/faq/model.js"></script>
+    <script src="js/faq/routing.js"></script>
+    <script src="js/mainPage/controller.js"></script>
+    <script src="js/mainPage/model.js"></script>
+    <script src="js/mainPage/routing.js"></script>
+    <script src="js/oldBrowser/controller.js"></script>
+    <script src="js/oldBrowser/model.js"></script>
+    <script src="js/oldBrowser/routing.js"></script>
+    <script src="js/popUps/controller.js"></script>
+    <script src="js/popUps/model.js"></script>
+    <script src="js/popUps/routing.js"></script>
+    <script src="js/profile/controller.js"></script>
+    <script src="js/profile/model.js"></script>
+    <script src="js/profile/routing.js"></script>
+    <script src="js/search/controller.js"></script>
+    <script src="js/search/model.js"></script>
+    <script src="js/search/routing.js"></script>
+
     <link rel="stylesheet" href="styles/contacts.css">
     <link rel="stylesheet" href="styles/error-page.css">
     <link rel="stylesheet" href="styles/FAQ.css">
