Adding some code for testing

--- a/index.html
+++ b/index.html
@@ -47,5 +47,7 @@
 </head>
 <body>
     <ui-view></ui-view>
+    <br>
+    <a ui-sref="mainPage/content">content</a> | <a ui-sref="mainPage/carusel">carusel</a>
 </body>
 </html>
