Editing config code

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
     <link rel="stylesheet" href="styles/user-profile-edit.css">
 </head>
 <body>
-    <ui-view></ui-view>
+    <div ui-view="mainPage"></div>
     <br>
-    <a ui-sref="mainPage/content">content</a> | <a ui-sref="mainPage/carusel">carusel</a>
 </body>
 </html>
